<resources>
    <string name="app_name">Mejorandola1</string>

    <string name="hello_world">Todos los textos se modifican en el string.xml</string>
    <string name="action_settings">Settings</string>
    <string name="msg_submit">Enviar</string>
    <string name="msg_string">Ingrese su nombre</string>
    <string name="btnEntrada">Entrar</string>
    <string name="btnSalida">Salir</string>
    <string name="title_activity_activity2">activity2</string>
    <string name="btnList">Listar</string>
    <string name="hintLista">Ingresa tu nombre</string>
    <string name="title_activity_actividad__nombre">actividad_Nombre</string>
    <string name="title_activity_name_detail">NameDetail</string>
</resources>
