<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_msg" />

    <EditText
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:id="@+id/edt_nombre"
        android:inputType="textCapWords"
        android:hint="@string/msg_string">
        <requestFocus/>
    </EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_submit"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_vertical" />

    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/btnEntrada"
        android:id="@+id/btnEntrada" />

    <Button
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSalida"
        android:id="@+id/btnSalida" />

</LinearLayout>
